# PPDT-under-CKKS-A-Precision-Impact-Analysis

./: .gitgnore  .gitignore  README.md  generate_report.py  run.ps1  run_sortinghat_specific_he_only.ps1
DT_clear/: README.md  breast_tree.txt  fake_art_tree.txt  fake_hou_tree.txt  generic_tree_example.json  heart_tree.txt  json_tree_to_text.py  plain_tree_cancer.json  plain_tree_cancer.txt  plain_tree_cancer_readable.txt  plain_tree_iris.json  plain_tree_iris.txt  plain_tree_wine.json  plain_tree_wine.txt  plain_tree_wine_readable.txt  spam2_tree.txt  spam_tree.txt  steel_tree.txt
data/: test_data.csv  tree.csv  tree.json
paper_dpm_esorics/: paper.tex
results/: run_results_soft_adaptatif.csv
src/: .containerignore  CMakeLists.txt  ClearInference.cpp  ClearInference.h  Containerfile  DataLayout.cpp  DataLayout.h  HEInference.cpp  HEInference.h  HardTree.cpp  HardTree.h  Metrics.cpp  Metrics.h  OneHotEncoder.cpp  OneHotEncoder.h  PolyEval.cpp  PolyEval.h  README.md  SoftStepApprox.cpp  SoftStepApprox.h  SoftTree.cpp  SoftTree.h  TreeExporter.cpp  TreeExporter.h  TreeNode.cpp  TreeNode.h  main_clear.cpp  main_he.cpp  plain_tree.txt  podman-build-and-run.ps1  podman-build.ps1  podman-run-dataset.ps1  podman-run-he.ps1  podman-select-dataset-and-run.ps1  test_akavia_style.cpp  test_main.cpp  train_and_export.py
